Publish telemetry tests (#15128)