@@ -129,6 +129,7 @@
             <version>3.0.0-M3</version> <!-- {x-version-update;org.apache.maven.plugins:maven-surefire-plugin;external_dependency} -->
             <configuration>
               <argLine>
+                --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
                 --add-opens com.azure.digitaltwins.core/com.azure.digitaltwins.core=ALL-UNNAMED
               </argLine>
             </configuration>
